test/valid/test20.sl
integer a;
string s;
a := 5 * (3 - 1);
s := concatenate("test", substring("string", 1, 3));
print(a + length(s));