test/invalid/test10.sl
integer x; string s;
x := 5 + length(s);
s := "test";
x := s + 3;